feat: finish deliverable workbench cleanup
